--- a/themes/default-theme/theme.css
+++ b/themes/default-theme/theme.css
@@ -34,7 +34,7 @@
 }
 
 #mark h1 {
-    font: 200 2.4em "Tinos", sans-serif;
+    font: 2.4em "Tinos", serif;
     padding-bottom: 10px;
     border-bottom: 1px solid #000;
     margin-bottom: 64px;
